# Weather-ai

./: Readme.md  pyproject.toml
weather_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
